--- a/index.html
+++ b/index.html
@@ -1,52 +1,99 @@
 <!DOCTYPE html>
 <html lang="ar">
 <head>
-  <meta charset="UTF-8">
-  <title>PoworBot</title>
-  <style>
-    body {
-      background-color: black;
-      color: white;
-      font-family: Arial, sans-serif;
-      text-align: center;
-      padding-top: 100px;
-    }
-    h1 { font-size: 36px; }
-    button {
-      background-color: #1e90ff;
-      color: white;
-      font-size: 20px;
-      padding: 15px 30px;
-      margin: 10px;
-      border: none;
-      border-radius: 10px;
-      cursor: pointer;
-    }
-    button:hover {
-      background-color: #0f78d1;
-    }
-  </style>
+<meta charset="UTF-8">
+<title>PoworBot</title>
+<style>
+  body {
+    margin: 0;
+    padding: 0;
+    background: radial-gradient(circle at top, #0a0a0a, #111111 70%);
+    color: #00ffea;
+    font-family: 'Courier New', Courier, monospace;
+    overflow: hidden;
+  }
+  #container {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+  }
+  h1 {
+    font-size: 48px;
+    text-shadow: 0 0 10px #00ffea;
+    margin-bottom: 20px;
+  }
+  p {
+    font-size: 22px;
+    text-shadow: 0 0 8px #00ffea;
+  }
+  button {
+    background-color: #ff0066;
+    color: white;
+    font-size: 20px;
+    padding: 15px 30px;
+    margin: 15px;
+    border: none;
+    border-radius: 12px;
+    cursor: pointer;
+    box-shadow: 0 0 15px #ff0066;
+    transition: 0.3s;
+  }
+  button:hover {
+    box-shadow: 0 0 25px #ff00aa;
+  }
+</style>
 </head>
 <body>
 
-  <h1>مرحبا بك في PoworBot 🤖</h1>
-  <p>اختر نوع صوت PoworBot الخاص بك:</p>
-
+<div id="container">
+  <h1 id="title"></h1>
+  <p id="subtitle"></p>
   <button onclick="playSound('female')">أنا فتاة</button>
   <button onclick="playSound('male')">أنا رجل</button>
+</div>
 
-  <script>
-    function playSound(type) {
-      let audio;
-      if(type === 'female') {
-        audio = new Audio('https://ia800108.us.archive.org/1/items/97dbbb-5d-ff-6a-4e-9a-81ff-1c-489bee-0a-5c/97dbbb5d-ff6a-4e9a-81ff-1c489bee0a5c.mp3');
-      } else {
-        audio = new Audio('https://ia801602.us.archive.org/5/items/cc73803c-72b3-46a3-a4a6-7c9de86d23c5/cc73803c-72b3-46a3-a4a6-7c9de86d23c5.mp3');
+<script>
+  // نص PoworBot تدريجيًا
+  const text1 = "تم رصد حضورك...";
+  const text2 = "مرحبا، أنا PoworBot، سيد هذا العالم.";
+  const titleEl = document.getElementById("title");
+  const subtitleEl = document.getElementById("subtitle");
+
+  let i = 0;
+  function typeText(el, text, callback) {
+    let index = 0;
+    function addChar() {
+      if(index < text.length) {
+        el.innerHTML += text.charAt(index);
+        index++;
+        setTimeout(addChar, 70);
+      } else if(callback) {
+        callback();
       }
-      audio.play();
-      alert("لقد اخترت " + (type === 'female' ? "فتاة" : "رجل") + "!");
     }
-  </script>
+    addChar();
+  }
+
+  typeText(titleEl, text1, () => {
+    setTimeout(() => {
+      typeText(subtitleEl, text2);
+    }, 500);
+  });
+
+  // الأصوات
+  function playSound(type) {
+    let audio;
+    if(type === 'female') {
+      audio = new Audio('https://ia800108.us.archive.org/1/items/97dbbb-5d-ff-6a-4e-9a-81ff-1c-489bee-0a-5c/97dbbb5d-ff6a-4e9a-81ff-1c489bee0a5c.mp3');
+    } else {
+      audio = new Audio('https://ia801602.us.archive.org/5/items/cc73803c-72b3-46a3-a4a6-7c9de86d23c5/cc73803c-72b3-46a3-a4a6-7c9de86d23c5.mp3');
+    }
+    audio.play();
+    alert("لقد اخترت " + (type === 'female' ? "فتاة" : "رجل") + "!");
+  }
+</script>
 
 </body>
 </html>
