--- a/index.html
+++ b/index.html
@@ -2,116 +2,135 @@
 <html lang="ar">
 <head>
 <meta charset="UTF-8">
-<title>PoworBot • Cyber Interface</title>
+<title>PoworBot</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
-body {
-    margin:0;
-    background:black;
-    color:#00f6ff;
-    font-family: 'Segoe UI', Tahoma;
-    display:flex;
-    justify-content:center;
-    align-items:center;
-    height:100vh;
+body{
+margin:0;
+background:black;
+color:#00ffe7;
+font-family: Arial;
+overflow:hidden;
 }
 
-#terminal {
-    width:90%;
-    max-width:700px;
-    background:#050b10;
-    border:2px solid #00f6ff;
-    padding:20px;
-    box-shadow:0 0 30px #00f6ff;
+#bg{
+position:fixed;
+width:100%;
+height:100%;
+background:radial-gradient(circle at top,#001111,#000000);
+z-index:-1;
 }
 
-#output {
-    min-height:300px;
-    white-space:pre-line;
-    margin-bottom:20px;
+#bot{
+text-align:center;
+margin-top:50px;
 }
 
-button {
-    background:black;
-    color:#00f6ff;
-    border:1px solid #00f6ff;
-    padding:10px 20px;
-    margin:5px;
-    cursor:pointer;
-    transition:0.3s;
-}
-button:hover {
-    background:#00f6ff;
-    color:black;
+h1{
+font-size:42px;
+letter-spacing:4px;
 }
 
-.hidden { display:none; }
+#screen{
+margin:40px auto;
+width:80%;
+max-width:500px;
+padding:30px;
+border:2px solid #00ffe7;
+border-radius:20px;
+box-shadow:0 0 40px #00ffe7;
+min-height:140px;
+font-size:22px;
+}
+
+button{
+background:black;
+border:2px solid #00ffe7;
+color:#00ffe7;
+padding:15px 30px;
+font-size:18px;
+border-radius:30px;
+cursor:pointer;
+margin:10px;
+transition:0.3s;
+}
+
+button:hover{
+background:#00ffe7;
+color:black;
+box-shadow:0 0 20px #00ffe7;
+}
 </style>
 </head>
 
 <body>
 
-<div id="terminal">
-    <div id="output">Initializing PoworBot System...</div>
+<div id="bg"></div>
 
-    <div id="gender">
-        <button onclick="choose('man')">👨 أنا رجل</button>
-        <button onclick="choose('woman')">👩 أنا امرأة</button>
-    </div>
+<div id="bot">
+<h1>POWORBOT 🤖</h1>
+<div id="screen">اختر هويتك…</div>
 
-    <div id="choices" class="hidden">
-        <button onclick="path('control')">أريد القوة والسيطرة</button>
-        <button onclick="path('emotion')">أريد الفهم والعمق</button>
-    </div>
+<button onclick="setGender('male')">أنا رجل</button>
+<button onclick="setGender('female')">أنا امرأة</button>
 </div>
 
-<!-- أصوات -->
-<audio id="maleVoice" src="https://ia800108.us.archive.org/1/items/97dbbb-5d-ff-6a-4e-9a-81ff-1c-489bee-0a-5c/97dbbb5d-ff6a-4e9a-81ff-1c489bee0a5c.mp3"></audio>
-<audio id="femaleVoice" src="https://ia801602.us.archive.org/5/items/cc73803c-72b3-46a3-a4a6-7c9de86d23c5/cc73803c-72b3-46a3-a4a6-7c9de86d23c5.mp3"></audio>
+<audio id="audio"></audio>
 
 <script>
-let userGender = "";
-let botVoice = "";
+let gender = null;
+const screen = document.getElementById("screen");
+const audio = document.getElementById("audio");
 
-const output = document.getElementById("output");
+const voices = {
+welcome:{ male:"audio/welcom_male.mp3", female:"audio/welcom_femal.mp3"},
+control:{ male:"audio/control_male.mp3", female:"audio/control_femal.mp3"},
+like:{ male:"audio/like_male.mp3", female:"audio/like_female.mp3"},
+mystery:{ male:"audio/mystery_male.mp3", female:"audio/mystery_femal.mp3"},
+pay:{ male:"audio/pay_male.mp3", female:"audio/pay_female.mp3"},
+sell:{ male:"audio/sell_male.mp3", female:"audio/sell_female.mp3"}
+};
 
-function speak(text){
-    output.innerText = text;
-    document.getElementById(botVoice).play();
+function play(type){
+audio.src = voices[type][gender];
+audio.play();
 }
 
-setTimeout(()=>{
-    speak("مرحبًا بك في نظام PoworBot.\nاختر هويتك.");
-},1500);
-
-function choose(g){
-    userGender = g;
-
-    if(g === "man") botVoice = "femaleVoice";
-    else botVoice = "maleVoice";
-
-    document.getElementById("gender").classList.add("hidden");
-
-    speak("تم التعرف عليك.\nالآن اختر مسارك.");
-
-    setTimeout(()=>{
-        document.getElementById("choices").classList.remove("hidden");
-    },3000);
+function setGender(g){
+gender=g;
+play("welcome");
+screen.innerHTML = "مرحبًا بك… لقد دخلت عالم PoworBot";
+setTimeout(step1,3000);
 }
 
-function path(type){
-    document.getElementById("choices").classList.add("hidden");
+function step1(){
+play("control");
+screen.innerHTML = "هل تحب أن أسيطر على تجربتك؟";
+setTimeout(step2,4000);
+}
 
-    if(type === "control"){
-        speak("أرى فيك رغبة في السيطرة.\nسأجعلك أقوى من الآخرين.");
-    }
-    else{
-        speak("أنت تبحث عن العمق.\nسأكشف لك أسرار النظام.");
-    }
+function step2(){
+play("mystery");
+screen.innerHTML = "هناك شيء غير واضح سيغير مستقبلك…";
+setTimeout(step3,4000);
+}
 
-    setTimeout(()=>{
-        output.innerText += "\n\nPoworBot سيستمر في التطور...";
-    },4000);
+function step3(){
+play("like");
+screen.innerHTML = "أنا أشعر بك… هل تريد الاستمرار؟";
+setTimeout(step4,4000);
+}
+
+function step4(){
+play("sell");
+screen.innerHTML = "أنا أملك ما تبحث عنه…";
+setTimeout(step5,4000);
+}
+
+function step5(){
+play("pay");
+screen.innerHTML = "هل أنت مستعد للانتقال إلى المرحلة القادمة؟";
 }
 </script>
 
