--- a/index.html
+++ b/index.html
@@ -83,54 +83,74 @@ let gender = null;
 const screen = document.getElementById("screen");
 const audio = document.getElementById("audio");
 
+// ملف صوت افتراضي قصير (Silent 1 ثانية)
+const defaultAudio = "data:audio/mp3;base64,//uQxAA..."; // هنا يمكن وضع ملف MP3 افتراضي قصير (silent)
+
+// أصوات البوت
 const voices = {
-welcome:{ male:"audio/welcom_male.mp3", female:"audio/welcom_femal.mp3"},
-control:{ male:"audio/control_male.mp3", female:"audio/control_femal.mp3"},
+welcome:{ male:"audio/welcome_male.mp3", female:"audio/welcome_female.mp3"},
+control:{ male:"audio/control_male.mp3", female:"audio/control_female.mp3"},
 like:{ male:"audio/like_male.mp3", female:"audio/like_female.mp3"},
-mystery:{ male:"audio/mystery_male.mp3", female:"audio/mystery_femal.mp3"},
+mystery:{ male:"audio/mystery_male.mp3", female:"audio/mystery_female.mp3"},
 pay:{ male:"audio/pay_male.mp3", female:"audio/pay_female.mp3"},
 sell:{ male:"audio/sell_male.mp3", female:"audio/sell_female.mp3"}
 };
 
+// تشغيل الصوت مع fallback للملف الافتراضي
 function play(type){
-audio.src = voices[type][gender];
-audio.play();
+    const src = voices[type]?.[gender] || defaultAudio;
+    fetch(src)
+    .then(res => {
+        if(!res.ok) throw new Error("ملف الصوت غير موجود: " + src);
+        return res.blob();
+    })
+    .then(blob => {
+        audio.src = URL.createObjectURL(blob);
+        audio.play().catch(err => {
+            console.error("فشل تشغيل الصوت:", err);
+        });
+    })
+    .catch(err => {
+        console.warn(err.message, "- سيتم تشغيل الصوت الافتراضي");
+        audio.src = defaultAudio;
+        audio.play();
+    });
 }
 
 function setGender(g){
-gender=g;
-play("welcome");
-screen.innerHTML = "مرحبًا بك… لقد دخلت عالم PoworBot";
-setTimeout(step1,3000);
+    gender=g;
+    play("welcome");
+    screen.innerHTML = "مرحبًا بك… لقد دخلت عالم PoworBot";
+    setTimeout(step1,3000);
 }
 
 function step1(){
-play("control");
-screen.innerHTML = "هل تحب أن أسيطر على تجربتك؟";
-setTimeout(step2,4000);
+    play("control");
+    screen.innerHTML = "هل تحب أن أسيطر على تجربتك؟";
+    setTimeout(step2,4000);
 }
 
 function step2(){
-play("mystery");
-screen.innerHTML = "هناك شيء غير واضح سيغير مستقبلك…";
-setTimeout(step3,4000);
+    play("mystery");
+    screen.innerHTML = "هناك شيء غير واضح سيغير مستقبلك…";
+    setTimeout(step3,4000);
 }
 
 function step3(){
-play("like");
-screen.innerHTML = "أنا أشعر بك… هل تريد الاستمرار؟";
-setTimeout(step4,4000);
+    play("like");
+    screen.innerHTML = "أنا أشعر بك… هل تريد الاستمرار؟";
+    setTimeout(step4,4000);
 }
 
 function step4(){
-play("sell");
-screen.innerHTML = "أنا أملك ما تبحث عنه…";
-setTimeout(step5,4000);
+    play("sell");
+    screen.innerHTML = "أنا أملك ما تبحث عنه…";
+    setTimeout(step5,4000);
 }
 
 function step5(){
-play("pay");
-screen.innerHTML = "هل أنت مستعد للانتقال إلى المرحلة القادمة؟";
+    play("pay");
+    screen.innerHTML = "هل أنت مستعد للانتقال إلى المرحلة القادمة؟";
 }
 </script>
 
