--- a/index.html
+++ b/index.html
@@ -83,74 +83,54 @@ let gender = null;
 const screen = document.getElementById("screen");
 const audio = document.getElementById("audio");
 
-// ملف صوت افتراضي قصير (Silent 1 ثانية)
-const defaultAudio = "data:audio/mp3;base64,//uQxAA..."; // هنا يمكن وضع ملف MP3 افتراضي قصير (silent)
-
-// أصوات البوت
 const voices = {
-welcome:{ male:"audio/welcome_male.mp3", female:"audio/welcome_female.mp3"},
-control:{ male:"audio/control_male.mp3", female:"audio/control_female.mp3"},
-like:{ male:"audio/like_male.mp3", female:"audio/like_female.mp3"},
-mystery:{ male:"audio/mystery_male.mp3", female:"audio/mystery_female.mp3"},
-pay:{ male:"audio/pay_male.mp3", female:"audio/pay_female.mp3"},
-sell:{ male:"audio/sell_male.mp3", female:"audio/sell_female.mp3"}
+welcome:{ male:"1e5c18cc-3c46-42d1-98ec-069e8a53e5b0.mp3", female:"4b6e249b-944d-4a63-bbac-21dfc941f412.mp3"},
+control:{ male:"07f99e96-7562-488a-b81f-e2e213dc4480.mp3", female:"31ec5b5e-ee5f-4d53-a249-637e67ab7c89.mp3"},
+like:{ male:"a7b7861e-a627-4a39-be55-5e734753e9b6.mp3", female:"ttsMP3.com_VoiceText_2026-1-9_8-24-46.mp3"},
+mystery:{ male:"ttsMP3.com_VoiceText_2026-1-9_8-31-31.mp3", female:"ttsMP3.com_VoiceText_2026-1-9_8-36-29.mp3"},
+pay:{ male:"ttsMP3.com_VoiceText_2026-1-9_8-38-13.mp3", female:"ttsMP3.com_VoiceText_2026-1-9_8-41-25.mp3"},
+sell:{ male:"ttsMP3.com_VoiceText_2026-1-9_8-46-0.mp3", female:"ttsMP3.com_VoiceText_2026-1-9_8-49-22.mp3"}
 };
 
-// تشغيل الصوت مع fallback للملف الافتراضي
 function play(type){
-    const src = voices[type]?.[gender] || defaultAudio;
-    fetch(src)
-    .then(res => {
-        if(!res.ok) throw new Error("ملف الصوت غير موجود: " + src);
-        return res.blob();
-    })
-    .then(blob => {
-        audio.src = URL.createObjectURL(blob);
-        audio.play().catch(err => {
-            console.error("فشل تشغيل الصوت:", err);
-        });
-    })
-    .catch(err => {
-        console.warn(err.message, "- سيتم تشغيل الصوت الافتراضي");
-        audio.src = defaultAudio;
-        audio.play();
-    });
+audio.src = voices[type][gender];
+audio.play();
 }
 
 function setGender(g){
-    gender=g;
-    play("welcome");
-    screen.innerHTML = "مرحبًا بك… لقد دخلت عالم PoworBot";
-    setTimeout(step1,3000);
+gender=g;
+play("welcome");
+screen.innerHTML = "مرحبًا بك… لقد دخلت عالم PoworBot";
+setTimeout(step1,3000);
 }
 
 function step1(){
-    play("control");
-    screen.innerHTML = "هل تحب أن أسيطر على تجربتك؟";
-    setTimeout(step2,4000);
+play("control");
+screen.innerHTML = "هل تحب أن أسيطر على تجربتك؟";
+setTimeout(step2,4000);
 }
 
 function step2(){
-    play("mystery");
-    screen.innerHTML = "هناك شيء غير واضح سيغير مستقبلك…";
-    setTimeout(step3,4000);
+play("mystery");
+screen.innerHTML = "هناك شيء غير واضح سيغير مستقبلك…";
+setTimeout(step3,4000);
 }
 
 function step3(){
-    play("like");
-    screen.innerHTML = "أنا أشعر بك… هل تريد الاستمرار؟";
-    setTimeout(step4,4000);
+play("like");
+screen.innerHTML = "أنا أشعر بك… هل تريد الاستمرار؟";
+setTimeout(step4,4000);
 }
 
 function step4(){
-    play("sell");
-    screen.innerHTML = "أنا أملك ما تبحث عنه…";
-    setTimeout(step5,4000);
+play("sell");
+screen.innerHTML = "أنا أملك ما تبحث عنه…";
+setTimeout(step5,4000);
 }
 
 function step5(){
-    play("pay");
-    screen.innerHTML = "هل أنت مستعد للانتقال إلى المرحلة القادمة؟";
+play("pay");
+screen.innerHTML = "هل أنت مستعد للانتقال إلى المرحلة القادمة؟";
 }
 </script>
 
