--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ const screen = document.getElementById("screen");
 const audio = document.getElementById("audio");
 
 const voices = {
-welcome:{ male:"1e5c18cc-3c46-42d1-98ec-069e8a53e5b0.mp3", female:"4b6e249b-944d-4a63-bbac-21dfc941f412.mp3"},
+welcome:{ male:"https://ia902905.us.archive.org/20/items/ttsmp3.com_voicetext_2026-1-9_8-24-46_202601/ttsMP3.com_VoiceText_2026-1-9_8-24-46.mp3", female:"4b6e249b-944d-4a63-bbac-21dfc941f412.mp3"},
 control:{ male:"07f99e96-7562-488a-b81f-e2e213dc4480.mp3", female:"31ec5b5e-ee5f-4d53-a249-637e67ab7c89.mp3"},
 like:{ male:"a7b7861e-a627-4a39-be55-5e734753e9b6.mp3", female:"ttsMP3.com_VoiceText_2026-1-9_8-24-46.mp3"},
 mystery:{ male:"ttsMP3.com_VoiceText_2026-1-9_8-31-31.mp3", female:"ttsMP3.com_VoiceText_2026-1-9_8-36-29.mp3"},
